[package]
name = "ffmpeg-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["lib"]

[dependencies]
bytemuck = "1.16.1"
cpal = "0.15.3"
egui = {version="0.27.1",path="../egui/crates/egui"}
ffmpeg-the-third = { version = "2.0.1" }#, features = ["build"] }#, path="ffmpeg-the-third"}
image = { version = "0.25.1", default-features = false, features = ["png"] }
oneshot = "0.1.8"
pending = { version = "1.1", git = "https://github.com/vincent-sparks/pending" } # TODO put pending on crates
replace_with = "0.1.7"
thiserror = "1.0.63"

[dev-dependencies]
eframe = {version="0.27.1",path="../egui/crates/eframe"}
